[package]
name = "debot-backtester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
clap = "3.1"
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking"] }

debot-market-analyzer = "*"
debot-db = "*"
